--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@heroicons/react": "^2.1.3",
     "clsx": "^2.1.1",
+    "dotenv": "^16.4.5",
     "next": "14.2.3",
+    "pg": "^8.12.0",
     "react": "^18",
     "react-dom": "^18"
   },
