--- a/package.json
+++ b/package.json
@@ -10,17 +10,20 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.3",
+    "@tailwindcss/forms": "^0.5.7",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
     "next": "14.2.3",
     "pg": "^8.12.0",
-    "react": "^18",
-    "react-dom": "^18"
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "use-debounce": "^10.0.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "18.2.21",
+    "@types/react-dom": "18.2.14",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
