--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   "dependencies": {
     "@heroicons/react": "^2.1.3",
     "@tailwindcss/forms": "^0.5.7",
+    "@types/bcrypt": "^5.0.2",
+    "bcrypt": "^5.1.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
     "next": "14.2.3",
+    "next-auth": "^5.0.0-beta.19",
     "pg": "^8.12.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
